python/tvm/relay/grammar/py2/RelayParser.py
# Generated from /home/sslyu/tvm/python/tvm/relay/grammar/Relay.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class RelayParser ( Parser ):

    grammarFileName = "Relay.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"','", u"'['", u"']'", 
                     u"'if'", u"'else'", u"'let'", u"'='", u"';'", u"'{'", 
                     u"'}'", u"'fn'", u"'->'", u"'def'", u"':'", u"'Tensor'", 
                     u"'_'", u"'v0.0.2'", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'*'", u"'/'", u"'+'", u"'-'", u"'<'", u"'>'", u"'<='", 
                     u"'>='", u"'=='", u"'!='", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'mut'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"SEMVER", 
                      u"WS", u"LINE_COMMENT", u"COMMENT", u"MUL", u"DIV", 
                      u"ADD", u"SUB", u"LT", u"GT", u"LE", u"GE", u"EQ", 
                      u"NE", u"GLOBAL_VAR", u"LOCAL_VAR", u"GRAPH_VAR", 
                      u"MUT", u"BOOL_LIT", u"FLOAT", u"NAT", u"CNAME" ]

    RULE_opIdent = 0
    RULE_prog = 1
    RULE_expr = 2
    RULE_func = 3
    RULE_defn = 4
    RULE_argList = 5
    RULE_varList = 6
    RULE_var = 7
    RULE_attrList = 8
    RULE_attr = 9
    RULE_typeParamSeq = 10
    RULE_type_ = 11
    RULE_shapeSeq = 12
    RULE_shape = 13
    RULE_typeIdent = 14
    RULE_body = 15
    RULE_scalar = 16
    RULE_ident = 17

    ruleNames =  [ u"opIdent", u"prog", u"expr", u"func", u"defn", u"argList", 
                   u"varList", u"var", u"attrList", u"attr", u"typeParamSeq", 
                   u"type_", u"shapeSeq", u"shape", u"typeIdent", u"body", 
                   u"scalar", u"ident" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    SEMVER=19
    WS=20
    LINE_COMMENT=21
    COMMENT=22
    MUL=23
    DIV=24
    ADD=25
    SUB=26
    LT=27
    GT=28
    LE=29
    GE=30
    EQ=31
    NE=32
    GLOBAL_VAR=33
    LOCAL_VAR=34
    GRAPH_VAR=35
    MUT=36
    BOOL_LIT=37
    FLOAT=38
    NAT=39
    CNAME=40

    def __init__(self, input, output=sys.stdout):
        super(RelayParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class OpIdentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RelayParser.OpIdentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def CNAME(self):
            return self.getToken(RelayParser.CNAME, 0)

        def getRuleIndex(self):
            return RelayParser.RULE_opIdent

        def accept(self, visitor):
            if hasattr(visitor, "visitOpIdent"):
                return visitor.visitOpIdent(self)
            else:
                return visitor.visitChildren(self)




    def opIdent(self):

        localctx = RelayParser.OpIdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_opIdent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(RelayParser.CNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RelayParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SEMVER(self):
            return self.getToken(RelayParser.SEMVER, 0)

        def EOF(self):
            return self.getToken(RelayParser.EOF, 0)

        def expr(self):
            return self.getTypedRuleContext(RelayParser.ExprContext,0)


        def defn(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.DefnContext)
            else:
                return self.getTypedRuleContext(RelayParser.DefnContext,i)


        def getRuleIndex(self):
            return RelayParser.RULE_prog

        def accept(self, visitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = RelayParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(RelayParser.SEMVER)
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RelayParser.EOF, RelayParser.T__14]:
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==RelayParser.T__14:
                    self.state = 39
                    self.defn()
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [RelayParser.T__0, RelayParser.T__3, RelayParser.T__5, RelayParser.T__7, RelayParser.T__12, RelayParser.SUB, RelayParser.GLOBAL_VAR, RelayParser.LOCAL_VAR, RelayParser.GRAPH_VAR, RelayParser.BOOL_LIT, RelayParser.FLOAT, RelayParser.NAT, RelayParser.CNAME]:
                self.state = 45
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 48
            self.match(RelayParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RelayParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RelayParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(RelayParser.ExprContext, self).copyFrom(ctx)


    class IdentExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.IdentExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(RelayParser.IdentContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitIdentExpr"):
                return visitor.visitIdentExpr(self)
            else:
                return visitor.visitChildren(self)


    class CallContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.CallContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitCall"):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)


    class NegContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.NegContext, self).__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(RelayParser.SUB, 0)
        def expr(self):
            return self.getTypedRuleContext(RelayParser.ExprContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitNeg"):
                return visitor.visitNeg(self)
            else:
                return visitor.visitChildren(self)


    class TupleContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.TupleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitTuple"):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.ParensContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(RelayParser.ExprContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitParens"):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class FuncExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.FuncExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(RelayParser.FuncContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitFuncExpr"):
                return visitor.visitFuncExpr(self)
            else:
                return visitor.visitChildren(self)


    class ScalarExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.ScalarExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def scalar(self):
            return self.getTypedRuleContext(RelayParser.ScalarContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitScalarExpr"):
                return visitor.visitScalarExpr(self)
            else:
                return visitor.visitChildren(self)


    class LetContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.LetContext, self).__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(RelayParser.VarContext,0)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)

        def MUT(self):
            return self.getToken(RelayParser.MUT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitLet"):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)


    class TensorContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.TensorContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitTensor"):
                return visitor.visitTensor(self)
            else:
                return visitor.visitChildren(self)


    class IfElseContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.IfElseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(RelayParser.ExprContext,0)

        def body(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.BodyContext)
            else:
                return self.getTypedRuleContext(RelayParser.BodyContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitIfElse"):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)


    class GraphContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.GraphContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(RelayParser.IdentContext,0)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitGraph"):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)


    class BinOpContext(ExprContext):

        def __init__(self, parser, ctx): # actually a RelayParser.ExprContext)
            super(RelayParser.BinOpContext, self).__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(RelayParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelayParser.ExprContext,i)

        def MUL(self):
            return self.getToken(RelayParser.MUL, 0)
        def DIV(self):
            return self.getToken(RelayParser.DIV, 0)
        def ADD(self):
            return self.getToken(RelayParser.ADD, 0)
        def SUB(self):
            return self.getToken(RelayParser.SUB, 0)
        def LT(self):
            return self.getToken(RelayParser.LT, 0)
        def GT(self):
            return self.getToken(RelayParser.GT, 0)
        def LE(self):
            return self.getToken(RelayParser.LE, 0)
        def GE(self):
            return self.getToken(RelayParser.GE, 0)
        def EQ(self):
            return self.getToken(RelayParser.EQ, 0)
        def NE(self):
            return self.getToken(RelayParser.NE, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitBinOp"):
                return visitor.visitBinOp(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RelayParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = RelayParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 51
                self.match(RelayParser.T__0)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(RelayParser.T__1)
                pass

            elif la_ == 2:
                localctx = RelayParser.NegContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.match(RelayParser.SUB)
                self.state = 56
                self.expr(17)
                pass

            elif la_ == 3:
                localctx = RelayParser.FuncExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.func()
                pass

            elif la_ == 4:
                localctx = RelayParser.TupleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(RelayParser.T__0)
                self.state = 59
                self.match(RelayParser.T__1)
                pass

            elif la_ == 5:
                localctx = RelayParser.TupleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.match(RelayParser.T__0)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(RelayParser.T__2)
                self.state = 63
                self.match(RelayParser.T__1)
                pass

            elif la_ == 6:
                localctx = RelayParser.TupleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 65
                self.match(RelayParser.T__0)
                self.state = 66
                self.expr(0)
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 67
                    self.match(RelayParser.T__2)
                    self.state = 68
                    self.expr(0)
                    self.state = 71 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==RelayParser.T__2):
                        break

                self.state = 73
                self.match(RelayParser.T__1)
                pass

            elif la_ == 7:
                localctx = RelayParser.TensorContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(RelayParser.T__3)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RelayParser.T__0) | (1 << RelayParser.T__3) | (1 << RelayParser.T__5) | (1 << RelayParser.T__7) | (1 << RelayParser.T__12) | (1 << RelayParser.SUB) | (1 << RelayParser.GLOBAL_VAR) | (1 << RelayParser.LOCAL_VAR) | (1 << RelayParser.GRAPH_VAR) | (1 << RelayParser.BOOL_LIT) | (1 << RelayParser.FLOAT) | (1 << RelayParser.NAT) | (1 << RelayParser.CNAME))) != 0):
                    self.state = 76
                    self.expr(0)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==RelayParser.T__2:
                        self.state = 77
                        self.match(RelayParser.T__2)
                        self.state = 78
                        self.expr(0)
                        self.state = 83
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 86
                self.match(RelayParser.T__4)
                pass

            elif la_ == 8:
                localctx = RelayParser.IfElseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.match(RelayParser.T__5)
                self.state = 88
                self.match(RelayParser.T__0)
                self.state = 89
                self.expr(0)
                self.state = 90
                self.match(RelayParser.T__1)
                self.state = 91
                self.body()
                self.state = 92
                self.match(RelayParser.T__6)
                self.state = 93
                self.body()
                pass

            elif la_ == 9:
                localctx = RelayParser.LetContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                self.match(RelayParser.T__7)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RelayParser.MUT:
                    self.state = 96
                    self.match(RelayParser.MUT)


                self.state = 99
                self.var()
                self.state = 100
                self.match(RelayParser.T__8)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(RelayParser.T__9)
                self.state = 103
                self.expr(6)
                pass

            elif la_ == 10:
                localctx = RelayParser.LetContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.match(RelayParser.T__7)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RelayParser.MUT:
                    self.state = 106
                    self.match(RelayParser.MUT)


                self.state = 109
                self.var()
                self.state = 110
                self.match(RelayParser.T__8)
                self.state = 111
                self.match(RelayParser.T__10)
                self.state = 112
                self.expr(0)
                self.state = 113
                self.match(RelayParser.T__11)
                self.state = 114
                self.match(RelayParser.T__9)
                self.state = 115
                self.expr(5)
                pass

            elif la_ == 11:
                localctx = RelayParser.GraphContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 117
                self.ident()
                self.state = 118
                self.match(RelayParser.T__8)
                self.state = 119
                self.expr(0)
                self.state = 120
                self.match(RelayParser.T__9)
                self.state = 121
                self.expr(3)
                pass

            elif la_ == 12:
                localctx = RelayParser.IdentExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 123
                self.ident()
                pass

            elif la_ == 13:
                localctx = RelayParser.ScalarExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 124
                self.scalar()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 155
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = RelayParser.BinOpContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 127
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 128
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RelayParser.MUL or _la==RelayParser.DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 129
                        self.expr(17)
                        pass

                    elif la_ == 2:
                        localctx = RelayParser.BinOpContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 130
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 131
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RelayParser.ADD or _la==RelayParser.SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 132
                        self.expr(16)
                        pass

                    elif la_ == 3:
                        localctx = RelayParser.BinOpContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 133
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 134
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RelayParser.LT) | (1 << RelayParser.GT) | (1 << RelayParser.LE) | (1 << RelayParser.GE))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 135
                        self.expr(15)
                        pass

                    elif la_ == 4:
                        localctx = RelayParser.BinOpContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 136
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 137
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==RelayParser.EQ or _la==RelayParser.NE):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 138
                        self.expr(14)
                        pass

                    elif la_ == 5:
                        localctx = RelayParser.LetContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 139
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 140
                        self.match(RelayParser.T__9)
                        self.state = 141
                        self.expr(5)
                        pass

                    elif la_ == 6:
                        localctx = RelayParser.CallContext(self, RelayParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 142
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 143
                        self.match(RelayParser.T__0)
                        self.state = 152
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RelayParser.T__0) | (1 << RelayParser.T__3) | (1 << RelayParser.T__5) | (1 << RelayParser.T__7) | (1 << RelayParser.T__12) | (1 << RelayParser.SUB) | (1 << RelayParser.GLOBAL_VAR) | (1 << RelayParser.LOCAL_VAR) | (1 << RelayParser.GRAPH_VAR) | (1 << RelayParser.BOOL_LIT) | (1 << RelayParser.FLOAT) | (1 << RelayParser.NAT) | (1 << RelayParser.CNAME))) != 0):
                            self.state = 144
                            self.expr(0)
                            self.state = 149
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==RelayParser.T__2:
                                self.state = 145
                                self.match(RelayParser.T__2)
                                self.state = 146
                                self.expr(0)
                                self.state = 151
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 154
                        self.match(RelayParser.T__1)
                        pass

             
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RelayParser.FuncContext, self).__init__(parent, invokingState)
            self.parser = parser

        def argList(self):
            return self.getTypedRuleContext(RelayParser.ArgListContext,0)


        def body(self):
            return self.getTypedRuleContext(RelayParser.BodyContext,0)


        def typeParamSeq(self):
            return self.getTypedRuleContext(RelayParser.TypeParamSeqContext,0)


        def type_(self):
            return self.getTypedRuleContext(RelayParser.Type_Context,0)


        def getRuleIndex(self):
            return RelayParser.RULE_func

        def accept(self, visitor):
            if hasattr(visitor, "visitFunc"):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = RelayParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(RelayParser.T__12)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RelayParser.T__3:
                self.state = 161
                self.typeParamSeq()


            self.state = 164
            self.match(RelayParser.T__0)
            self.state = 165
            self.argList()
            self.state = 166
            self.match(RelayParser.T__1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RelayParser.T__13:
                self.state = 167
                self.match(RelayParser.T__13)
                self.state = 168
                self.type_()


            self.state = 171
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefnContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(RelayParser.DefnContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(RelayParser.IdentContext,0)


        def argList(self):
            return self.getTypedRuleContext(RelayParser.ArgListContext,0)

